gyro_tester_gold/gyro_tester_gold/gyro_tester_gold.sdk/.metadata/.plugins/org.eclipse.cdt.ui/axi4_gyro_test_0.build.log
21:35:50 **** Incremental Build of configuration Debug for project axi4_gyro_test_0 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
In file included from ../src/main.c:6:0:
../../standalone_bsp_0/ps7_cortexa9_0/include/xbasic_types.h:115:2: warning: #warning The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert. [-Wcpp]
 #warning  The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert.
  ^~~~~~~
../../standalone_bsp_0/ps7_cortexa9_0/include/xbasic_types.h:116:2: warning: #warning Please refer the Standalone BSP UG647 for further details [-Wcpp]
 #warning  Please refer the Standalone BSP UG647 for further details
  ^~~~~~~
In file included from ../../standalone_bsp_0/ps7_cortexa9_0/include/xaxidma_bd.h:120:0,
                 from ../../standalone_bsp_0/ps7_cortexa9_0/include/xaxidma_bdring.h:87,
                 from ../../standalone_bsp_0/ps7_cortexa9_0/include/xaxidma.h:492,
                 from ../src/main.c:18:
../../standalone_bsp_0/ps7_cortexa9_0/include/xil_cache.h:102:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'void'
 void Xil_DCacheEnable(void);
 ^~~~
../src/main.c:171:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^~~~~~~
../src/main.c: In function 'fillTxPacketBufferSineWave':
../src/main.c:998:5: warning: unused variable 'Value' [-Wunused-variable]
  u8 Value;
     ^~~~~
../src/main.c:997:12: warning: unused variable 'Value2' [-Wunused-variable]
  u8 Value1,Value2;
            ^~~~~~
../src/main.c:997:5: warning: unused variable 'Value1' [-Wunused-variable]
  u8 Value1,Value2;
     ^~~~~~
../src/main.c:996:6: warning: unused variable 'Index' [-Wunused-variable]
  int Index;
      ^~~~~
../src/main.c: In function 'generateSineWave':
../src/main.c:1021:26: warning: unused variable 'w' [-Wunused-variable]
   signed short int i, v, w;
                          ^
../src/main.c:1021:23: warning: unused variable 'v' [-Wunused-variable]
   signed short int i, v, w;
                       ^
../src/main.c:1020:25: warning: variable 'mult' set but not used [-Wunused-but-set-variable]
   double f, x, y, base, mult;
                         ^~~~
../src/main.c:1020:16: warning: unused variable 'y' [-Wunused-variable]
   double f, x, y, base, mult;
                ^
../src/main.c:1020:10: warning: variable 'f' set but not used [-Wunused-but-set-variable]
   double f, x, y, base, mult;
          ^
../src/main.c: In function 'sendDMApacket':
../src/main.c:25719:6: warning: unused variable 'Index' [-Wunused-variable]
  int Index;
      ^~~~~
../src/main.c:25716:5: warning: variable 'Value' set but not used [-Wunused-but-set-variable]
  u8 Value;
     ^~~~~
../src/main.c: In function 'SaveData':
../src/main.c:25803:5: warning: variable 'Value' set but not used [-Wunused-but-set-variable]
  u8 Value;
     ^~~~~
../src/main.c: In function 'read_uart_bytes':
../src/main.c:26458:4: warning: implicit declaration of function 'load_sawtooth_up_data' [-Wimplicit-function-declaration]
    load_sawtooth_up_data();
    ^~~~~~~~~~~~~~~~~~~~~
../src/main.c:26462:4: warning: implicit declaration of function 'load_sawtooth_down_data' [-Wimplicit-function-declaration]
    load_sawtooth_down_data();
    ^~~~~~~~~~~~~~~~~~~~~~~
../src/main.c: In function 'fill_testADC_results_array':
../src/main.c:27022:5: warning: unused variable 'firstSetup' [-Wunused-variable]
  u8 firstSetup = 1;
     ^~~~~~~~~~
At top level:
../src/main.c:995:13: warning: 'fillTxPacketBufferSineWave' defined but not used [-Wunused-function]
 static void fillTxPacketBufferSineWave(int npoints, u8 *TxPacket){
             ^~~~~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:774:12: warning: 'closeDMADevice' defined but not used [-Wunused-function]
 static int closeDMADevice(){
            ^~~~~~~~~~~~~~
../src/main.c:489:6: warning: 'setSPIControl' defined but not used [-Wunused-function]
 void setSPIControl(Xuint32 v){
      ^~~~~~~~~~~~~
../src/main.c:464:5: warning: 'setGyroTxFIFOLooping' defined but not used [-Wunused-function]
 int setGyroTxFIFOLooping(){
     ^~~~~~~~~~~~~~~~~~~~
../src/main.c:459:5: warning: 'resetGyroTxFIFOLooping' defined but not used [-Wunused-function]
 int resetGyroTxFIFOLooping(){
     ^~~~~~~~~~~~~~~~~~~~~~
make: *** [src/main.o] Error 1

21:35:52 Build Finished (took 2s.79ms)

